# xcmd

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  xcmd.c  xcmd.h  xcmder
.workflow/: branch-pipeline.yml
doc/: list.txt  历史记录链表模型.drawio  指令和快捷键链表.drawio
example/: Makefile  linux_main.c  linux_xmcder_wrapper.c  linux_xmcder_wrapper.h  test_cmds.c
example/arduino/: .xcmd_confg  README.md  arduino.ino  arduino_xcmd.cpp  arduino_xcmd.h  ex_cmds.c  ex_cmds.h  ex_keys.c  ex_keys.h  init.py  readme.txt  test.c  test.h  test_cmds.cpp  xcmd.c  xcmd.h  xcmd_confg.h  xcmd_default_cmds.c  xcmd_default_cmds.h  xcmd_default_keys.c  xcmd_default_keys.h  xcmd_define.h
example/arduino/src/: xcmd.c  xcmd_cmds.h  xcmd_keys.c  xcmd_keys.h  (+10 more)
example/esp_idf/: CMakeLists.txt  sdkconfig.old
example/esp_idf/main/: CMakeLists.txt  esp_cmds.c  esp_cmds.h  esp_idf.c  test_cmds.c  xcmd_confg.h
example/linux/: Makefile  fatfs_disk_mmc.c  fatfs_disk_mmc.h  fatfs_disk_ram.c  fatfs_disk_ram.h  fatfs_port.c  fatfs_port.h  linux.ld  linux_cmds.c  linux_cmds.h  linux_keys.c  linux_keys.h  linux_main.c  test_cmds.c  xcmd_confg.h  xcmd_platform.c  xcmd_platform.h
extensions/ex_cmds/: ex_cmds.c  ex_cmds.h
extensions/ex_keys/: ex_keys.c  ex_keys.h
extensions/ex_list/: ex_list.c  ex_list.h  list.h
extensions/fs_cmds/: fatfs_port.c  fatfs_port.h  fs_cmds.c  fs_cmds.h
extensions/net_cmds/: socket_cmds.c  socket_cmds.h
extensions/test/: test.c  test.h
inc/: xcmd.h  xcmd_confg.h  xcmd_default_cmds.h  xcmd_default_confg.h  xcmd_default_keys.h  xcmd_define.h
src/: xcmd.c  xcmd.h  xcmd_cmds.c  xcmd_default_cmds.c  xcmd_default_keys.c  xcmd_keys.c  xnr_conf.h
xcmd/: xcmd.c  xcmd.h  xcmd_default_cmds.c  xcmd_default_keys.c  xcmd_default_keys.h
(+63 files in other folders)
