idf_component_register(SRCS "esp_cmds.c" "esp_idf.c"
                            "../../../extensions/test/test.c"
                            "../../../src/xcmd.c"
                            "../../../src/xcmd_keys.c"
                            "../../../src/xcmd_cmds.c"
                            "../../../src/xnr/xnr_history.c"
                            "../../../src/xnr/xnr_io.c"
                            "../../../src/xnr/xnr_key.c"
                            "../../../src/xnr/xnr_line.c"
                            "../../../src/xnr/xnr_var.c"
                    INCLUDE_DIRS "." 
                            "../../../src/"
                            "../../../src/xnr"
                            "../../../extensions/test/"
                            )
